--- a/Auerfarm_Application/Web.config
+++ b/Auerfarm_Application/Web.config
@@ -19,7 +19,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   <authentication mode="Forms">
-    <forms defaultUrl="~/Admin/Anders/announcements.html" loginUrl="~/Admin/Login.aspx" slidingExpiration="true" timeout="1"></forms>
+    <forms defaultUrl="~/Admin/Anders/map-objects.aspx" loginUrl="~/Admin/Login.aspx" slidingExpiration="true" timeout="1"></forms>
   </authentication>
   <authorization>
 <allow users="*" />
