--- a/Auerfarm_Application/Web.config
+++ b/Auerfarm_Application/Web.config
@@ -19,13 +19,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   <authentication mode="Forms">
-    <forms defaultUrl="~/Admin/Application/map-objects.aspx" loginUrl="~/Admin/Login.aspx" slidingExpiration="true" timeout="1"></forms>
+    <forms defaultUrl="~/Admin/Application/map-objects.aspx" loginUrl="~/Admin/Login.aspx" slidingExpiration="true" timeout="1000"></forms>
   </authentication>
   <authorization>
 <allow users="*" />
   </authorization>
   </system.web>
-  <location path="~/Admin/Anders">
+  <location path="~/Admin/Application">
     <system.web>
       <authorization>
         <deny users="?" />
