--- a/Auerfarm_Application/Auerfarm_Application.csproj
+++ b/Auerfarm_Application/Auerfarm_Application.csproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin\Application\announcements.html" />
