Nut I dont fuck wit commitment

--- a/AdminPage/Web.config
+++ b/AdminPage/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AdminPage-20170213060359.mdf;Initial Catalog=aspnet-AdminPage-20170213060359;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AuerfarmDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
