--- a/AdminPage/AdminPage.csproj
+++ b/AdminPage/AdminPage.csproj
@@ -190,9 +190,19 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="DAL\InfoItemOps.cs" />
+    <Compile Include="DAL\MapItemOps.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703282224027_InitialMigration.cs" />
+    <Compile Include="Migrations\201703282224027_InitialMigration.Designer.cs">
+      <DependentUpon>201703282224027_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703290024253_EditMapObjects.cs" />
+    <Compile Include="Migrations\201703290024253_EditMapObjects.Designer.cs">
+      <DependentUpon>201703290024253_EditMapObjects.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DBModels\AuerfarmDataContext.cs" />
     <Compile Include="Models\DBModels\FarmInfoItem.cs" />
@@ -268,6 +278,7 @@
     <Content Include="Views\Home\NewsPartial.cshtml" />
     <Content Include="Views\Home\ShopPartial.cshtml" />
     <Content Include="Views\Home\CalendarPartial.cshtml" />
+    <Content Include="Views\Home\MapListPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +292,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201703282224027_InitialMigration.resx">
+      <DependentUpon>201703282224027_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703290024253_EditMapObjects.resx">
+      <DependentUpon>201703290024253_EditMapObjects.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
