--- a/AdminPage/Web.config
+++ b/AdminPage/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AdminPage-20170213060359.mdf;Initial Catalog=aspnet-AdminPage-20170213060359;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AuerfarmDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AdminPage-20170213060359.mdf;Initial Catalog=aspnet-AdminPage-20170213060359;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="AuerfarmDataContext" connectionString="Data Source=DESKTOP-A49HU04\SQLEXPRESS;Initial Catalog=Auerfarm;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
